--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Mathio</string>
+
+    <string name="quick_maths">QUICK MATHS</string>
+    <string name="copyright">ANDREJ LONČÍK 2018 ©</string>
 </resources>
